# xalt

./: Makefile.in  README.ORM.md  configure  configure.ac
src/: XALTdb.py  createDB.in.py  removeDataBase.py  xalt_db.conf  xalt_db_model.py  xalt_db_test.py  xalt_file_to_db.in.py  xalt_util.py
test/: test_XALTdb.py
test/xaltdb_test_data/: link.json  reverseMap.json  run.json
